--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,7 @@ endif ()
 
 add_custom_target(
     UpdateConfigHeader
-    COMMAND "${CMAKE}" -D BUILD_NUMBER=${BUILD_NUMBER} -D CI_PROVIDER="${CI_PROVIDER}" -P "${CMAKE_CURRENT_LIST_DIR}/options.cmake"
+    COMMAND "${CMAKE_COMMAND}" -D BUILD_NUMBER=${BUILD_NUMBER} -D CI_PROVIDER="${CI_PROVIDER}" -P "${CMAKE_CURRENT_LIST_DIR}/options.cmake"
     WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}"
 )
 
