--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -698,6 +698,7 @@ SET(relive_lib_src
     ../Tools/relive_api/CamConverter.hpp
     ../Tools/relive_api/ApiFG1Reader.cpp
     ../Tools/relive_api/ApiFG1Reader.hpp
+    CommandLineParser.hpp
     BinaryPath.hpp
     BinaryPath.cpp
     SwitchStates.hpp
