remove abe ctor inits

--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -578,6 +578,7 @@ SET(AliveLibAESrc
     ../AliveLibAE/ScopedSeq.hpp
     ../AliveLibAE/ZapSpark.hpp
     ../AliveLibAE/ZapSpark.cpp
+    ../AliveLibAE/MudokonEnums.hpp
 )
 
 SET(renderer_src
