--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,108 +1,54 @@
-
 trigger:
 - abi_break_refcount
 
-jobs:
-- job: Linux
-  pool:
-    vmImage: 'ubuntu-latest'
-  steps:
-  - script: |
-        sudo apt-get update
-        sudo apt-get install libsdl2-dev qtdeclarative5-dev qtmultimedia5-dev qttools5-dev
-        git submodule update --init --depth=1
-        cmake --version
-        mkdir build
-        cd build
-        cmake -DBUILD_NUMBER=$(Build.BuildId) -DCI_PROVIDER="AzureDevOps" -G"Unix Makefiles" ..
-        make -j4
-        cpack -G DEB
-        ctest
-  - publish: $(System.DefaultWorkingDirectory)/build/relive-0.1-Linux.deb
-    artifact: RELIVE-Linux.deb
-- job: macOS
-  pool:
-    vmImage: 'macOS-latest'
-  steps:
-  - script: |
-        brew install sdl2 molten-vk qt5
-        export LDFLAGS="-L/usr/local/opt/qt@5/lib"
-        export CPPFLAGS="-I/usr/local/opt/qt@5/include"
-        export QT_DIR=/usr/local/opt/qt@5
-        echo 'export PATH="/usr/local/opt/qt@5/bin:$PATH"' >> /Users/runner/.bash_profile
-        git submodule update --init --depth=1
-        cmake --version
-        mkdir build
-        cd build
-        mkdir Frameworks
-        cp /usr/local/lib/libSDL2.dylib ./Frameworks/libSDL2.dylib
-        cp /usr/local/lib/libMoltenVK.dylib ./Frameworks/libMoltenVK.dylib
-        cmake -DBUILD_NUMBER=$(Build.BuildId) -DCI_PROVIDER="AzureDevOps" -G"Unix Makefiles" ..
-        make -j4
-        cpack -G DragNDrop
-        ctest
-  - publish: $(System.DefaultWorkingDirectory)/build/relive-0.1-Darwin.dmg
-    artifact: RELIVE-MacOSX.dmg
-- job: Windows32
-  pool:
-    vmImage: 'windows-2019'
-  steps:
-  - script: |
-        set AE_PATH=C:\\GOG Games\\Abes Exoddus
-        set AO_PATH=C:\\GOG Games\\Abes Oddysee
-        mkdir "C:\\GOG Games\\Abes Exoddus"
-        mkdir "C:\\GOG Games\\Abes Oddysee"
-        git submodule update --init --depth=1
-        mkdir C:\temp
-        powershell Invoke-WebRequest 'https://github.com/AliveTeam/SDL2_win32_dev_mirror/files/8710940/SDL2-devel-2.0.22-VC.zip' -OutFile C:\temp\SDL2-devel-2.0.22-VC.zip
-        7z x C:\Temp\SDL2-devel-2.0.22-VC.zip -oC:\Temp
-        pip install aqtinstall
-        aqt list-qt windows desktop --arch 5.15.2
-        mkdir Qt
-        cd Qt
-        aqt install-qt windows desktop 5.15.2 win32_msvc2019
-        mkdir build
-        cd build
-        dir $(Build.SourcesDirectory)\Qt\5.15.2\msvc2019
-        set QT_DIR=$(Build.SourcesDirectory)\Qt\5.15.2\msvc2019\lib\cmake\Qt5
-        dir %QT_DIR$
-        set path=%path%;$(Build.SourcesDirectory)\Qt\5.15.2\msvc2019
-        cmake .. -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DBUILD_NUMBER=$(Build.BuildId) -DCI_PROVIDER="AzureDevOps" -DQt5_DIR="$(Build.SourcesDirectory)\Qt\5.15.2\msvc2019\lib\cmake\Qt5" -DSDL2_DIR=C:\Temp\SDL2-2.0.22 -G "Visual Studio 16 2019" -A Win32
-        cmake --build .
-        cpack.exe -G ZIP -C Debug
-        ctest
-  - publish: $(System.DefaultWorkingDirectory)/build/relive-0.1-win32.zip
-    artifact: RELIVE-Windows32.zip
-- job: Windows64
-  pool:
-    vmImage: 'windows-2019'
-  steps:
-  - script: |
-        set AE_PATH=C:\\GOG Games\\Abes Exoddus
-        set AO_PATH=C:\\GOG Games\\Abes Oddysee
-        mkdir "C:\\GOG Games\\Abes Exoddus"
-        mkdir "C:\\GOG Games\\Abes Oddysee"
-        git submodule update --init --depth=1
-        mkdir C:\temp
-        powershell Invoke-WebRequest 'https://github.com/AliveTeam/SDL2_win32_dev_mirror/files/8710940/SDL2-devel-2.0.22-VC.zip' -OutFile C:\temp\SDL2-devel-2.0.22-VC.zip
-        7z x C:\Temp\SDL2-devel-2.0.22-VC.zip -oC:\Temp
-        pip install aqtinstall
-        aqt list-qt windows desktop --arch 5.15.2
-        mkdir Qt
-        cd Qt
-        aqt install-qt windows desktop 5.15.2 win64_msvc2019_64
-        mkdir build
-        cd build
-        dir $(Build.SourcesDirectory)\Qt\5.15.2\msvc2019_64
-        set QT_DIR=$(Build.SourcesDirectory)\Qt\5.15.2\msvc2019_64\lib\cmake\Qt5
-        dir %QT_DIR$
-        set path=%path%;$(Build.SourcesDirectory)\Qt\5.15.2\msvc2019_64
-        cmake .. -DBUILD_NUMBER=$(Build.BuildId) -DCI_PROVIDER="AzureDevOps" -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DQt5_DIR="$(Build.SourcesDirectory)\Qt\5.15.2\msvc2019_64\lib\cmake\Qt5" -DSDL2_DIR=C:\Temp\SDL2-2.0.22 -G "Visual Studio 16 2019" -A x64
-        cmake --build .
-        cpack.exe -G ZIP -C Debug
-        ctest
-  - publish: $(System.DefaultWorkingDirectory)/build/relive-0.1-win64.zip
-    artifact: RELIVE-Windows64.zip
+strategy:
+  matrix:
+    Linux:
+      imageName: 'ubuntu-latest'
+      cpack_package_type: 'DEB'
+      cpack_executable: 'cpack'
+      installer_package_path: '$(System.DefaultWorkingDirectory)/build/relive-0.1-Linux.deb'
+      installer_package_artifact_name: 'RELIVE-Linux.deb'
+
+    macOS:
+      imageName: 'macOS-latest'
+      cpack_package_type: 'DragNDrop'
+      cpack_executable: 'cpack'
+      installer_package_path: '$(System.DefaultWorkingDirectory)/build/relive-0.1-Darwin.dmg'
+      installer_package_artifact_name: 'RELIVE-MacOSX.dmg'
+
+    Windows32:
+      imageName: 'windows-2019'
+      cpack_package_type: 'ZIP'
+      # .exe required due to another file in the path named 'pack'
+      cpack_executable: 'cpack.exe'
+      installer_package_path: '$(System.DefaultWorkingDirectory)/build/relive-0.1-win32.zip'
+      installer_package_artifact_name: 'RELIVE-Windows32.zip'
+
+    Windows64:
+      imageName: 'windows-2019'
+      cpack_package_type: 'ZIP'
+      # .exe required due to another file in the path named 'pack'
+      cpack_executable: 'cpack.exe'
+      installer_package_path: '$(System.DefaultWorkingDirectory)/build/relive-0.1-win64.zip'
+      installer_package_artifact_name: 'RELIVE-Windows64.zip'
+
+# Below runs for every instance of the matrix strategy unless it is specfically conditioned not to
+pool:
+  vmImage: $(imageName)
+
 steps:
- - script: |
-        echo "when does this run, if at all?"
+- script: git submodule update --init --depth=1
+  displayName: 'shallow clone submodules'
+
+- script: $(cpack_executable) -G $(cpack_package_type)
+  displayName: 'Build installer'
+
+- script: cmake --build .
+  displayName: 'Compile'
+
+- script: ctest
+  displayName: 'Run tests'
+
+- publish: $(installer_package_path)
+    artifact: $(installer_package_artifact_name)
